======================================================================================
CHANGE LOG
TNGz /pndoc/changelog.txt
TNGz (C) 2009 Wendel Voigt
======================================================================================
version 1.5
  * Added support for TNG 8.0.0 (and is still compatible with TNG 7.1.3)
  * Added support for different password hash methods (as supported by TNG 8.0.0 and up)
  * Removed dependancy on ADODB which is being removed in Zikula 1.3.0
  * Localized all TNG database queries to make future porting to other databases easier
  * fixed issue with adminlog.txt not displaying properly in TNGz Administration
  * fixed relationship plugin in template TNGz_user_main.htm to be active.  Can turn off in TNGz Administration.
  * fixed issue with .pot file (two entries with the same id)
  * code clean up, and simplification
  * Warning: TNG 7.x.x and below will no longer sync passwords correctly starting with Zikula 1.3.0
    Solution: Upgrade to TNG 8.0.0 (when available) before moving to Zikula 1.3.0
  
version 1.4
  * This version requires Zikula 1.2.x or above
  * Fixed problem with &lang= parameter now used by Zikula. Before fix, TNG would choke on it if it was used.
  * added new Zikula $modversion['url'] for module
  * changed to support new Zikula language constructs.  Including use of 2 letter language designations instead of 3 letter.
  * converted TNGz to use Zikula's gettext for language translations
  * fixed problem with corrupted links being returned from the search function
  * fixed problem where some UTF-8 characters were not being displayed properly.
  * fixed issue where sitemap generation did not include familyID parameter in the URL
  * internally, all blocks and plugins now use a common database connection point
  * internally, fixed problem where closed database connection was not being re-opened
  
version 1.3
  * Added WhatsNew plugin
  * Added ThisDay plugin
  * Added Histogram feature