@@ -44,7 +44,7 @@
     </tr>
     <tr>
         <td align="center" valign="middle" ><!--[showphoto showliving='user' phototype='thumb' photolist='' max_height='200' max_width='200']--></td>
-	<td align="center" valign="top" ><div class="surname-big"><!--[surnames title="" type='cloud' top='25' links='yes']--></div></td>
+	<td align="center" valign="top" ><div class="cloud-big"><!--[surnames title="" type='cloud' top='25' links='yes']--></div></td>
 	<td align="center" valign="middle" ><a href="<!--[pnmodurl modname=TNGz show=placemap ]-->"><img src="<!--[pnmodurl modname=TNGz type=user func=worldmap size='tiny']-->" alt="Map" /></a></td>
     </tr>
     <tr>
